# TP-game

./: CMakeLists.txt  Game_exec  README.md
game/: AbstractRace.cpp  AbstractRace.h  AbstractRaceBuilder.cpp  AbstractRaceBuilder.h  Army.cpp  Army.h  BattleDecorators.h  Characters.cpp  Characters.h  Command.cpp  Command.h  CompositeVisitor.cpp  CompositeVisitor.h  Factory.cpp  Factory.h  Field.h  Game.h  GameExecution.cpp  GameExecution.h  Objects.cpp  Objects.h  RankBuilder.cpp  RankBuilder.h  Unit.cpp  Unit.h
main/: main.cpp
test/: test.cpp  unit_behavior_test.h  unit_creation_test.h  unit_structure_test.h
